docs/envoy/v1.9.0/_sources/api-v2/admin/v2alpha/memory.proto.rst.txt
.. _envoy_api_file_envoy/admin/v2alpha/memory.proto:

Memory
======


.. _envoy_api_msg_admin.v2alpha.Memory:

admin.v2alpha.Memory
--------------------

`[admin.v2alpha.Memory proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/admin/v2alpha/memory.proto#L9>`_

Proto representation of the internal memory consumption of an Envoy instance. These represent
values extracted from an internal TCMalloc instance. For more information, see the section of the
docs entitled ["Generic Tcmalloc Status"](http://gperftools.github.io/gperftools/tcmalloc.html).

.. code-block:: json

  {
    "allocated": "...",
    "heap_size": "...",
    "pageheap_unmapped": "...",
    "pageheap_free": "...",
    "total_thread_cache": "..."
  }

.. _envoy_api_field_admin.v2alpha.Memory.allocated:

allocated
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The number of bytes allocated by the heap for Envoy. This is an alias for
  `generic.current_allocated_bytes`.
  
  
.. _envoy_api_field_admin.v2alpha.Memory.heap_size:

heap_size
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The number of bytes reserved by the heap but not necessarily allocated. This is an alias for
  `generic.heap_size`.
  
  
.. _envoy_api_field_admin.v2alpha.Memory.pageheap_unmapped:

pageheap_unmapped
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The number of bytes in free, unmapped pages in the page heap. These bytes always count towards
  virtual memory usage, and depending on the OS, typically do not count towards physical memory
  usage. This is an alias for `tcmalloc.pageheap_unmapped_bytes`.
  
  
.. _envoy_api_field_admin.v2alpha.Memory.pageheap_free:

pageheap_free
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The number of bytes in free, mapped pages in the page heap. These bytes always count towards
  virtual memory usage, and unless the underlying memory is swapped out by the OS, they also
  count towards physical memory usage. This is an alias for `tcmalloc.pageheap_free_bytes`.
  
  
.. _envoy_api_field_admin.v2alpha.Memory.total_thread_cache:

total_thread_cache
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The amount of memory used by the TCMalloc thread caches (for small objects). This is an alias
  for `tcmalloc.current_total_thread_cache_bytes`.
  
  

